--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
         <input name="name" type="text" value="{{ twittero }}" id="name_field" /><br><br>
         <label for="text_field">Text:</label><br>
         <input name="text" type="text" id="text_field" /><br><br>
-        <input type="submit" value="Submit" id="submitBtn" />
+        <input type="submit" value="Submit"/>
       </form>
     {% endif %}
   </div>
