--- a/views/layout.html
+++ b/views/layout.html
@@ -97,7 +97,7 @@
       });
       // Cuando el evento 'new_tweet' es disparado, hacé algo con el tweet enviado.
       socket.on("newTweet", function(tweet) {
-        console.log(tweet);
+        alert(tweet);
         alert("Actualizando... fijate en la consola...");
         // Alguna lógica para agregar el tweet al DOM
       });
